<resources>
    <string name="app_name">My Application</string>
    <string name="signup">Create An Account</string>
    <string name="login">Login Form</string>
    <string name="email_hint">Email Id</string>
    <string name="password_hint">Password</string>
    <string name="price_symbol">₹</string>
    <string name="name_hint">Name</string>
    <string name="contact_hint">Contact No.</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="date_of_birth_hint">Date Of Birth</string>


</resources>