<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_create_account"
        style="@style/bold_20_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="17dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_marginTop="@dimen/_10ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="399dp"
        android:layout_height="47dp"
        android:layout_below="@+id/login"
        android:layout_marginHorizontal="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_20ssp"
        android:background="@drawable/custom_border"
        android:drawableLeft="@drawable/ic_icon_email"
        android:drawablePadding="@dimen/_8ssp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="399dp"
        android:layout_height="47dp"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_20ssp"
        android:background="@drawable/custom_border"
        android:drawableLeft="@drawable/ic_password_reset"
        android:drawablePadding="@dimen/_8ssp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <Button
        android:visibility="gone"
        android:id="@+id/main_login"
        style="@style/bold_20_button"
        android:layout_width="@dimen/_100ssp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_20ssp"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/black" />



</RelativeLayout>
