<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg4"
    tools:context=".SignupActivity">


    <EditText
        android:id="@+id/signup_name"
        android:layout_width="382dp"
        android:layout_height="47dp"
        android:layout_below="@+id/login"
        android:layout_marginHorizontal="@dimen/_4ssp"
        android:layout_marginTop="@dimen/_20ssp"
        android:background="@drawable/custom_border"
        android:drawableLeft="@drawable/ic_name"
        android:drawablePadding="@dimen/_8ssp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="382dp"
        android:layout_height="47dp"
        android:layout_below="@+id/login"
        android:layout_marginHorizontal="@dimen/_4ssp"
        android:layout_marginTop="@dimen/_10ssp"
        android:background="@drawable/custom_border"
        android:drawableLeft="@drawable/ic_icon_email"
        android:drawablePadding="@dimen/_8ssp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <EditText
        android:drawableLeft="@drawable/ic__contactno"
        android:maxLength="10"
        android:id="@+id/signup_contact_no"
        android:layout_width="382dp"
        android:layout_height="47dp"
        android:layout_below="@+id/login"
        android:layout_marginHorizontal="@dimen/_4ssp"
        android:layout_marginTop="@dimen/_10ssp"
        android:background="@drawable/custom_border"
        android:drawablePadding="@dimen/_8ssp"
        android:hint="@string/contact_hint"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="382dp"
        android:layout_height="47dp"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="@dimen/_4ssp"
        android:layout_marginTop="@dimen/_10ssp"
        android:background="@drawable/custom_border"
        android:drawableLeft="@drawable/ic_password_reset"
        android:drawablePadding="@dimen/_8ssp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_width="382dp"
        android:layout_height="47dp"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="@dimen/_4ssp"
        android:layout_marginTop="@dimen/_10ssp"
        android:background="@drawable/custom_border"
        android:drawableLeft="@drawable/ic_password_reset"
        android:drawablePadding="@dimen/_8ssp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <EditText
        android:editable="false"
        android:drawableRight="@drawable/calander"
        android:id="@+id/signup_date_of_birth"
        android:layout_width="382dp"
        android:layout_height="47dp"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="@dimen/_4ssp"
        android:layout_marginTop="@dimen/_10ssp"
        android:background="@drawable/custom_border"
        android:drawableLeft="@drawable/ic__555442003"
        android:drawablePadding="@dimen/_8ssp"
        android:hint="@string/date_of_birth_hint"
        android:paddingRight="@dimen/_10ssp"
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/signup_gender"
        android:layout_marginTop="@dimen/_10ssp"
        android:layout_marginHorizontal="@dimen/_4ssp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioButton
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="Male"
        android:id="@+id/signup_male"
        android:buttonTint="@color/black" />

    <RadioButton
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="Female"
        android:id="@+id/signup_female"
        android:buttonTint="@color/black" />

    <RadioButton
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="Transgender"
        android:id="@+id/signup_transgender"
        android:buttonTint="@color/black" />
    </RadioGroup>

    <LinearLayout
        android:layout_marginTop="@dimen/_10ssp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_4ssp">

        <TextView
            android:layout_weight="2"

            style="@style/bold_20_text"
            android:text="City"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_marginRight="@dimen/_10ssp"
            android:background="@color/gray"
            android:id="@+id/signup_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/signup_button"
        style="@style/bold_20_button"
        android:layout_width="@dimen/_100ssp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_city"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_20ssp"
        android:text="Signup"
        android:textAllCaps="false"
        android:textColor="@color/black" />


</LinearLayout>